# FoodDeliveryPredic

./: README.md  data_visualization.py  main.py  preprocessing.py  pyproject.toml
models/: multiple_linear_regression.py  neural_networks.py
